refactor : adding meta tags and seo optimized

--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Title and Meta Description -->
     <title>Portfolio - Dhiraj Arya</title>
+    <meta name="description" content="Explore the portfolio of Dhiraj Arya, showcasing skills in full stack development, including HTML, CSS, JavaScript, React, NodeJS, and more." />
+    
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Portfolio - Dhiraj Arya" />
+    <meta property="og:description" content="Explore the portfolio of Dhiraj Arya, a full stack developer skilled in modern web technologies." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourportfolio.com" />
+    <meta property="og:image" content="https://yourportfolio.com/images/preview.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio - Dhiraj Arya" />
+    <meta name="twitter:description" content="Explore the portfolio of Dhiraj Arya, a skilled full stack developer." />
+    <meta name="twitter:image" content="https://yourportfolio.com/images/preview.png" />
+
+    <!-- Author and Keywords for SEO -->
+    <meta name="author" content="Dhiraj Arya" />
+    <meta name="keywords" content="Dhiraj Arya, full stack developer, portfolio, HTML, CSS, JavaScript, React, NodeJS, web development, front-end, back-end" />
+
+    <!-- Robots Tag for SEO Control -->
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
