--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- Title and Meta Description -->
-    <title>Portfolio - Dhiraj Arya</title>
-    <meta name="description" content="Explore the portfolio of Dhiraj Arya, showcasing skills in full stack development, including HTML, CSS, JavaScript, React, NodeJS, and more." />
-    
-    <!-- Open Graph Meta Tags for Social Media -->
-    <meta property="og:title" content="Portfolio - Dhiraj Arya" />
+    <title>Dhiraj Arya – Self-Taught Full Stack Developer</title>
+    <meta name="description" content="Explore the portfolio of Dhiraj Arya, showcasing skills in full stack development using HTML, CSS, JavaScript, React, Node.js, and more." />
+
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Dhiraj Arya – Self-Taught Full Stack Developer" />
     <meta property="og:description" content="Explore the portfolio of Dhiraj Arya, a full stack developer skilled in modern web technologies." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourportfolio.com" />
-    <meta property="og:image" content="https://yourportfolio.com/images/preview.png" />
+    <meta property="og:url" content="https://dhirajarya.xyz/" />
+    <meta property="og:image" content="https://dhirajarya.xyz/preview.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Portfolio - Dhiraj Arya" />
-    <meta name="twitter:description" content="Explore the portfolio of Dhiraj Arya, a skilled full stack developer." />
-    <meta name="twitter:image" content="https://yourportfolio.com/images/preview.png" />
+    <meta name="twitter:title" content="Dhiraj Arya – Self-Taught Full Stack Developer" />
+    <meta name="twitter:description" content="Explore the portfolio of Dhiraj Arya, a skilled full stack developer creating fast and scalable web apps." />
+    <meta name="twitter:image" content="https://dhirajarya.xyz/preview.png" />
 
-    <!-- Author and Keywords for SEO -->
+    <!-- Author, Keywords & SEO Enhancements -->
     <meta name="author" content="Dhiraj Arya" />
-    <meta name="keywords" content="Dhiraj Arya, full stack developer, portfolio, HTML, CSS, JavaScript, React, NodeJS, web development, front-end, back-end" />
-
-    <!-- Robots Tag for SEO Control -->
+    <meta name="keywords" content="Dhiraj Arya, full stack developer, portfolio, web development, React, Node.js, JavaScript, HTML, CSS, MongoDB, front-end, back-end" />
     <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://dhirajarya.xyz/" />
+    <meta name="theme-color" content="#0f172a" />
   </head>
   <body>
     <div id="root"></div>
