--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://dhirajarya.xyz/" />
     <meta name="theme-color" content="#0f172a" />
+    <!-- umami tracking code  -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="1b0929d5-7db4-480e-8c78-98449b80b380"></script>
 
     <!-- clerity code  -->
 <script type="text/javascript">
